main.css
body {
	background-color: rgb(228, 228, 228);
	font-family: "Trebuchet MS", Helvetica, sans-serif;
}

/* top-child */

.container-title {
	font-size: 1.5em;
	font-weight: 600;
}

#escolha-plano {
	border: 3px solid rgb(100, 160, 255);
}

#top-container {
	margin: 2vw;
	margin-bottom: 0;
}

/* end of top-child */

/* bottom-child */

.container-subtitle {
	font-size: 1.4em;
	font-weight: 600;
}

.child-container {
	background-color: white;
	padding-left: 2vw;
	padding-right: 2vw;
	padding-top: 2vh;
	padding-bottom: 2vh;
	margin-bottom: 2vh;
	height: 41vh;
	position: relative;
}

.child-container-number {
	position: absolute;
	font-weight: 900;
	font-size: 2.5em;
	right: 5.25%;
	top: 5%;
}

.container-payflow {
	width: 26.5vw;
	float: left;
}

.container-payflow:nth-of-type(3) {
	margin-left: 1.75vw;
}

.container-payflow:last-child {
	float: right;
}

.container-payflow-bottomrow {
	margin-top: 25px;
	width: 100%;
}

/* end of bottom-child */

/* shared */

.container-input select {
	background-image: linear-gradient(45deg, transparent 50%, rgb(200, 0, 0) 50%), 
	linear-gradient(135deg, rgb(200, 0, 0) 50%, transparent 50%);
	background-position:
    calc(100% - 7px),
    calc(100% - 2px);
	background-size: 5px 5px, 5px 5px, 1px 1.5em;
	background-repeat: no-repeat;
    -webkit-appearance: none;
}

.bottom-border, .container-input input, .container-input select {
	border: 0;
	outline: 0;
	border-bottom: 1px solid rgb(200, 0, 0);
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
	padding-bottom: 5px;
}

::placeholder { 
    color: rgb(200,200,200);
    opacity: 1; /* Firefox */
}

:-ms-input-placeholder {
	color: rgb(200,200,200);
}

::-ms-input-placeholder {
	color: rgb(200,200,200);
}

.red-alert {
	color: red;
	font-weight: bold;
}

.button {
	background-color: white;
	border: 1px rgb(200, 0, 0) solid;
	color: rgb(200, 0, 0);
	padding: 1.5%;
	width: 100%;
	font-size: 0.7em;
}

.button:hover {
	cursor: pointer;
}

/* end of shared */

/* inputs */

.container-input {
	width: 100%;
	margin-bottom: 1%;
}

.container-input label {
	font-size: 0.65em;
}

.container-input input, .container-input select {
	display: block;
	width: 100%;
	font-size: 1.1em;
}

/* end of inputs */

/* 'meus dados' */

#meusdados-warning {
	font-size: 0.65em;
	font-weight: 100;
	text-align: justify;
	margin-top: 25px;
}

/* end of 'meus dados' */

/* 'pagamento' */

.pagamento-cartaonum {
	position: relative;
}

.pagamento-cartaonum-col1 {
	width: 80%;
	display: inline-block;
	overflow: auto;
}

.pagamento-cartaonum-col1 > div {
	margin-top: 6%;
}

.pagamento-cartaonum-codseguranca {
	width: 40%;
	float: right;
}

.pagamento-cartaonum-ano, .pagamento-cartaonum-mes {
	width: 27%;
	margin-right: 3%;
	float: left;
}

#pagamento-button-multiplus, #pagamento-button-peela {
	width: 48%;
}

#pagamento-button-multiplus {
	float: left;
}

#pagamento-button-peela {
	float: right;
}

#pagamento-cartaonum-bandeira {
	width: 15%;
	height: auto;
	position: absolute;
	right: 3%;
	top: 20%;
}

/* end of 'pagamento' */

/* 'escolha plano' */

#escolha-plano-select-wrapper {
	margin-top: 15px;
	min-width: 200px;
	width: 20%;
	float: left;
}

#escolha-plano-planos {
	float: right;
	width: 77%;
	margin-left: 2%;
}

.plano {
	text-align: center;
	float: left;
	width: 10.5%;
	padding: 1%;
	font-size: 0.75em;
}

.plano > .plano-title > div {
	border: 0;
	outline: 0;
	border-bottom: 1px solid rgb(200, 0, 0);
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
	width: 90%;
	margin: 0 auto;
	margin-bottom: 5px;
}

.plano-img > img {
	width: 100%;
	height: auto;
}

.plano:last-of-type {
	float: right;
}
/* end of 'escolha plano' */

